seiscomp/seiscomp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: seiscomp
  name: seiscomp-fdsnws
  labels:
    app: seiscomp
spec:
  selector:
    matchLabels:
      app: seiscomp
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: seiscomp
        tier: frontend
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: seiscomp-fdsnws
          # image: registry.192.168.131.9.nip.io/seiscomp:5.3.0_0.1-rc
          image: registry.192.168.131.9.nip.io/seiscomp-5.3.0:0.2 
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /home/sysop/init.sh
              subPath: init.sh
            - name: config
              mountPath: /opt/seiscomp/etc/global.cfg
              subPath: global.cfg
            - name: config
              mountPath: /opt/seiscomp/etc/kernel.cfg
              subPath: kernel.cfg
            - name: config
              mountPath: /opt/seiscomp/etc/scmaster.cfg.orig
              subPath: scmaster.cfg.orig
            - name: nfs-vol
              mountPath: /nfs_data
          livenessProbe:
            exec:
              command:
                [
                  "/bin/bash",
                  "-c",
                  "wget http://localhost:8080 -O /dev/null",
                ]
            initialDelaySeconds: 20
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
                [
                  "/bin/bash",
                  "-c",
                  "wget http://localhost:8080 -O /dev/null",
                ]
            initialDelaySeconds: 15
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 1000
            runAsGroup: 1001
      volumes:
        - name: config
          configMap:
            name: seiscomp-config
        - name: nfs-vol
          nfs:
            server: hpcfdsn1.ct.int.ingv.it
            path: /home/fdsnmanager/hpcfdsn1SDS
